<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="none"
    android:background="@color/background"
    tools:context=".presentation.account.AccountFragment" >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/background"
        android:padding="10dp" >

        <TextView
            android:id="@+id/tvUsername"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textColor="@color/text"
            android:textSize="20sp"
            android:fontFamily="@font/roboto_bold"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            tools:text="username" />

        <TextView
            android:id="@+id/tvEmail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/roboto_bold"
            android:textAlignment="center"
            android:textColor="@color/account_email"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvUsername"
            tools:text="username@mail.ru" />

        <TextView
            android:id="@+id/tvYouLike"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:fontFamily="@font/roboto_bold"
            android:text="@string/liked_films"
            android:textColor="@color/text"
            android:textSize="14sp"
            android:visibility="gone"
            tools:visibility="visible"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvEmail" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvLikedMovies"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            android:visibility="gone"
            tools:visibility="visible"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvYouLike"
            tools:listitem="@layout/movie" />

        <TextView
            android:id="@+id/tvYouLeftReview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:fontFamily="@font/roboto_bold"
            android:text="@string/user_left_review"
            android:textColor="@color/text"
            android:textSize="14sp"
            android:visibility="gone"
            tools:visibility="visible"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/rvLikedMovies" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvReviewedMovies"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            android:visibility="gone"
            tools:visibility="visible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvYouLeftReview"
            tools:listitem="@layout/movie" />

        <TextView
            android:id="@+id/tvTheme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/theme"
            android:layout_marginTop="15dp"
            android:textColor="@color/text"
            android:textSize="14sp"
            android:fontFamily="@font/roboto_bold"
            app:layout_constraintTop_toBottomOf="@id/rvReviewedMovies"
            app:layout_constraintStart_toStartOf="parent" />

        <RadioGroup
            android:id="@+id/rgRadioButtons"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@id/tvTheme"
            app:layout_constraintStart_toStartOf="parent" >

            <RadioButton
                android:id="@+id/rbLightTheme"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:textColor="@color/text"
                android:fontFamily="@font/roboto_light"
                android:text="@string/light_theme" />

            <RadioButton
                android:id="@+id/rbDarkTheme"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:textColor="@color/text"
                android:fontFamily="@font/roboto_light"
                android:text="@string/dark_theme" />

        </RadioGroup>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnSignOut"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:backgroundTint="@color/button_bg"
            android:fontFamily="@font/roboto_bold"
            android:text="@string/exit_account"
            android:textColor="@color/button_text"
            android:textSize="14sp"
            android:visibility="gone"
            app:cornerRadius="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/rgRadioButtons"
            tools:visibility="visible" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnSignIn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:layout_marginTop="10dp"
            android:backgroundTint="@color/button_bg"
            app:cornerRadius="8dp"
            android:text="@string/sign_in"
            android:fontFamily="@font/roboto_bold"
            android:textSize="14sp"
            android:textColor="@color/button_text"
            app:layout_constraintTop_toBottomOf="@id/rgRadioButtons"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>