<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    android:background="@color/background"
    tools:context=".presentation.registration.RegistrationFragment" >

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/text"
        android:fontFamily="@font/roboto_bold"
        android:textSize="14sp"
        android:text="@string/registration"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etUsername"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:autofillHints="username"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/search_view_bg"
        android:textColor="@color/text"
        android:textSize="14sp"
        android:fontFamily="@font/roboto_light"
        android:hint="@string/username_hint"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/etEmail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:autofillHints="emailAddress"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/search_view_bg"
        android:textColor="@color/text"
        android:textSize="14sp"
        android:fontFamily="@font/roboto_light"
        android:hint="@string/email_hint"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        app:layout_constraintTop_toBottomOf="@+id/etUsername"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:autofillHints="emailAddress"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/search_view_bg"
        android:textColor="@color/text"
        android:textSize="14sp"
        android:fontFamily="@font/roboto_light"
        android:hint="@string/email_hint"
        android:inputType="textPassword"
        android:minHeight="48dp"
        app:layout_constraintTop_toBottomOf="@+id/etEmail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnRegister"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/button_bg"
        app:cornerRadius="8dp"
        android:text="@string/register"
        android:textColor="@color/button_text"
        android:fontFamily="@font/roboto_bold"
        app:layout_constraintTop_toBottomOf="@id/etPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>